--- a/editor.html
+++ b/editor.html
@@ -2,7 +2,7 @@
     <html lang="en">
         <head>
             <!--- Meta Tags for SEO-->
-            <title>Doc2pen</title>
+            <title>Typed2hand</title>
             <meta charset="UTF-8">
             <link rel="shortcut icon" type="image/png"  href="assets/images/favicon.png"/>
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
