--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
           <!-- About Section -->
           <div id="about-intro" class="about container center-block">
             <h2>What are we about?</h2>
-                <p>One day, <span class="enhanced">Smitha</span> was very tensed about the assignments she has to submit in her college, because <span class="enhanced"> She Can Type Fast, But Can't Write Fast.</span></p>
-                <p>On talking about this issue to her friend <span class="enhanced">Harry</span>, he suggested <span class="enhanced">Typed2hand</span> as a solution to her problem.</p>
-                <p class="enhanced">Are you facing the same problem as Smitha did?</p>
-                <p> So, let's hear what Harry says about <span class="enhanced">Typed2hand.</span></p>
+                <p>One day, <span class="enhanced">Emma</span> was very tensed about the assignments she has to submit in her college, because <span class="enhanced"> She fell on the stairs and had a wrist sprain. She was unable to hold a pen.</span></p>
+                <p>On talking about this issue to her friend <span class="enhanced">Tom</span>, he suggested <span class="enhanced">Typed2hand</span> as a solution to her problem.</p>
+                <p class="enhanced">Are you facing the some similar problem as Emma did?</p>
+                <p> So, let's hear what Tom says about <span class="enhanced">Typed2hand.</span></p>
                 <br>
-                <h5><span class="enhanced">Typed2hand</span> converts your <span class="enhanced">typed assignments</span> into <span class="enhanced">handwritten</span> ones.</h5>
+                <h5><span class="enhanced">Typed2hand</span> converts your <span class="enhanced">typed Documents</span> into <span class="enhanced">handwritten</span> ones.</h5>
           </div>
           
           <!-- Feature Section -->
