--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <img id="typing-image" src="assets/images/about/typing.svg">
                 <h3>Step 3 : Type it</h3>
                 <br>
-                <p>Use your fast typing skill to type the Documents in the editor and get it in the handwritten form.</p>
+                <p>Use your fast typing skill to type the Documents in the editor and get it in the handwritten form instantly.</p>
             </div>
             <br>
             
